k8s/shepokes-depl1.yaml
apiVersion: v1
kind: Service
metadata:
  name: shepokes
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: shepokes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shepokes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shepokes
  template:
    metadata:
      labels:
        app: shepokes
    spec:
      containers:
      - name: shepokes-static-site
        image: kfface/shepokes-static-site:latest
        ports:
        - containerPort: 8080
