k8s/hello-kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - shepokes.com
    - hw2.shepokes.com
    secretName: hello-kubernetes-tls
  rules:
  - host: "shepokes.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shepokes
            port:
              number: 80
  - host: "hw2.shepokes.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shepokes-2
            port:
              number: 80
